k8s/bases/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: app
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 3000
